<resources>
    <string name="app_name">Quizz</string>
    <string name="geography">Geography</string>
    <string name="computer_science">Computer</string>
    <string name="science">Science</string>
    <string name="movie_and_tv">Movie and TV</string>
    <string name="art_and_culture">Art / culture</string>
    <string name="animals">Animals</string>
    <string name="done">Done !</string>
    <string name="your_score_is">\Your score is %1$d / 10</string>
    <string name="play_again">Play again</string>
    <string name="exit_to_menu">Exit to menu</string>
    <string name="leave">Leave ?</string>
    <string name="stop_current_game">Stop the current game ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="kitchen">Kitchen</string>
    <string name="sport">Sport</string>
</resources>