<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:useDefaultMargins="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/art"
                style="@style/category_cardview">

                <LinearLayout style="@style/category_linearlayout">

                    <ImageView
                        style="@style/category_imageview"
                        android:contentDescription="@string/art_and_culture"
                        android:src="@drawable/art" />

                    <TextView
                        style="@style/category_textview"
                        android:text="@string/art_and_culture" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/animals"
                style="@style/category_cardview">

                <LinearLayout style="@style/category_linearlayout">

                    <ImageView
                        style="@style/category_imageview"
                        android:contentDescription="@string/animals"
                        android:src="@drawable/animals" />

                    <TextView
                        style="@style/category_textview"
                        android:text="@string/animals" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/computer"
                style="@style/category_cardview">

                <LinearLayout style="@style/category_linearlayout">

                    <ImageView
                        style="@style/category_imageview"
                        android:contentDescription="@string/computer_science"
                        android:src="@drawable/computer" />

                    <TextView
                        style="@style/category_textview"
                        android:text="@string/computer_science" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/geography"
                style="@style/category_cardview">

                <LinearLayout style="@style/category_linearlayout">

                    <ImageView
                        style="@style/category_imageview"
                        android:contentDescription="@string/geography"
                        android:src="@drawable/geography" />

                    <TextView
                        style="@style/category_textview"
                        android:text="@string/geography" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/kitchen"
                style="@style/category_cardview">

                <LinearLayout style="@style/category_linearlayout">

                    <ImageView
                        style="@style/category_imageview"
                        android:contentDescription="@string/kitchen"
                        android:src="@drawable/kitchen" />

                    <TextView
                        style="@style/category_textview"
                        android:text="@string/kitchen" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/movies"
                style="@style/category_cardview">

                <LinearLayout style="@style/category_linearlayout">

                    <ImageView
                        style="@style/category_imageview"
                        android:contentDescription="@string/movie_and_tv"
                        android:src="@drawable/popcorn" />

                    <TextView
                        style="@style/category_textview"
                        android:text="@string/movie_and_tv" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/science"
                style="@style/category_cardview">

                <LinearLayout style="@style/category_linearlayout">

                    <ImageView
                        style="@style/category_imageview"
                        android:contentDescription="@string/science"
                        android:src="@drawable/science" />

                    <TextView
                        style="@style/category_textview"
                        android:text="@string/science" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sport"
                style="@style/category_cardview">

                <LinearLayout style="@style/category_linearlayout">

                    <ImageView
                        style="@style/category_imageview"
                        android:contentDescription="@string/sport"
                        android:src="@drawable/sport" />

                    <TextView
                        style="@style/category_textview"
                        android:text="@string/sport" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>
</ScrollView>
